--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "redux": "^4.1.2",
         "redux-logger": "^3.0.6",
         "redux-promise-middleware": "^6.1.2",
+        "sweetalert": "^2.1.2",
         "web-vitals": "^2.1.2"
     },
     "scripts": {
