--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
         "react-bootstrap": "^2.0.4",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
-        "react-router-dom": "^5.2.0",
+        "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
+        "react-toastify": "^8.1.0",
         "redux": "^4.1.2",
         "redux-logger": "^3.0.6",
         "redux-promise-middleware": "^6.1.2",
